...
              const SizedBox(width: 10),
              const Text("+60", style: TextStyle(fontSize: 20)),
              const SizedBox(width: 10),
              Expanded(
                child: TextField(
                  controller: phoneController,
                  key: Key("phone1"),
                  decoration: const InputDecoration(
                    border: OutlineInputBorder(),
                    labelText: 'Phone Number',
                  ),
                ),
              ),
...
      // Handle error
    }
  }

  // Function to request OTP from backend
  void requestOTP(String phoneNumber) async {
    final url = Uri.parse('http://$localhost/api/otp');
    final headers = {'Content-Type': 'application/json'};
    final body = jsonEncode({'phone': phoneNumber});

    print('Requesting OTP from $url with body: $body');

    try {
...
